--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="Description" content="Enter your description here"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="style/main.css">
-    <link rel="stylesheet" href="../dist/output.css">
+    <link rel="stylesheet" href="./src/style/main.css">
+    <link rel="stylesheet" href="./dist/output.css">
     <title>jqueryTest</title>
 </head>
 <body class=" ">
@@ -23,7 +23,7 @@
         </div>
         <div class="rightSide bg-white py-4">
             <div class="mainLogo">
-                <img src='./img/logo.png' alt="logo">
+                <img src='./src/img/logo.png' alt="logo">
             </div>
             <i class="fa-solid fa-bars  text-center cursor-pointer"></i>
             <div class="btmLogos">
@@ -61,7 +61,7 @@
        
    
 
-    <script src="js/jquery-1.11.1.min.js"></script>
-    <script src="js/main.js" type="module"></script>
+    <script src="src/js/jquery-1.11.1.min.js"></script>
+    <script src="src/js/main.js" type="module"></script>
 </body>
 </html>
